# pde_amr

./: .gitignore  CMakeLists.txt  README.md  proj-config.cmake.in
doc/: Makefile  main.bib  main.tex
doc/eom/: CauchyMomentum.tex  ConservationEnergy.tex  ConservationMass.tex  ConservationMomentum.tex  Continuity.tex  NavierStokes.tex  eos.tex  main.tex
doc/matlab/: energy.m  ns_stress.m
doc/mesh/: main.tex
src/: config.hh.in  grid.hh  main.cc
